--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
   <h1>Mych</h1>
   <p>Just me, on the internet.</p>
   <div class="links">
-    <a href="https://instagram.com/yourname" target="_blank">Instagram</a>
-    <a href="https://twitter.com/yourname" target="_blank">Twitter</a>
-    <a href="https://tiktok.com/@yourname" target="_blank">TikTok</a>
-    <a href="mailto:your@email.com">Email Me</a>
+    <a href="https://tiktok.com/@itz.mych" target="_blank">TikTok</a>
+    <a href="mailto:buisness.mychonyt@gmail.com">Email Me</a>
   </div>
 </body>
 </html>
+
